1 github pages 支持 2 对话框风格 3 固件下载改成二进制数组后的状态bug 4 翻译

--- a/app/src/i18n/en/common.json
+++ b/app/src/i18n/en/common.json
@@ -33,5 +33,6 @@
         "message-p2": "This app depends on some additional metadata to render the keymap.For an example repository ready to use now or metadata you can apply to your own keyboard repo, have a look at",
         "message-p3": "If you have another branch or repository the the required metadata files you may switch to them instead."
     },
-    "Total choices:": "Total choices"
+    "Total choices:": "Total choices",
+    "Errors in the file": "Errors in the file"
 }
