--- a/app/src/i18n/zh/common.json
+++ b/app/src/i18n/zh/common.json
@@ -32,5 +32,6 @@
         "message-p2": "当前应用依赖于元数据来绘制键位图。下面的样例库有助于您理解这些：",
         "message-p3": "如果您的其他分支包含这些元数据，您可以切换到相应的分支上去."
     },
-    "Total choices:": "选项数:"
+    "Total choices:": "选项数:",
+    "Errors in the file": "此文件中有错误"
 }
