修改适配 zmk-config的多shield方式

--- a/app/src/i18n/en/common.json
+++ b/app/src/i18n/en/common.json
@@ -34,5 +34,6 @@
         "message-p3": "If you have another branch or repository the the required metadata files you may switch to them instead."
     },
     "Total choices:": "Total choices",
-    "Errors in the file": "Errors in the file"
+    "Errors in the file": "Errors in the file",
+    "Shield": "Shield"
 }
