--- a/app/src/i18n/zh/common.json
+++ b/app/src/i18n/zh/common.json
@@ -33,5 +33,6 @@
         "message-p3": "如果您的其他分支包含这些元数据，您可以切换到相应的分支上去."
     },
     "Total choices:": "选项数:",
-    "Errors in the file": "此文件中有错误"
+    "Errors in the file": "此文件中有错误",
+    "Shield": "键盘型号"
 }
